@@ -34,11 +34,11 @@
     104 4 4
   </nxyz>
   <area51>
+    <!-- <box> -->
+    <!--   <point>0 0 0</point><point>103 1 0</point><value>1</value> -->
+    <!-- </box> -->
     <box>
-      <point>0 0 0</point><point>103 1 0</point><value>1</value>
-    </box>
-    <box>
-      <point>0 0 0</point><point>103 0 1</point><value>1</value>
+      <point>0 0 0</point><point>103 0 4</point><value>1</value>
     </box>
   </area51>
   <external_field>
