@@ -5,6 +5,9 @@ v0.7.0 not-yet-released
 
 v0.6.2 not-yet-released
 
+	* fix problem with exact area51 genration
+	of polymers and its test.        MM and LS
+	
 v0.6.1 23/1/19
 	* fix a problem with memory management for
 	  structure factors		LS
